Fixed image on mobile

--- a/style.css
+++ b/style.css
@@ -40,10 +40,8 @@ body {
     max-width: 600px;
 }
 
-.image {
-    min-height: 14rem;
-    background-position: center;
-    background-size: cover;
+img{
+    max-width: 100vw;
 }
 
 .text {
@@ -55,7 +53,7 @@ body {
 
 .text > :nth-child(1) {
     font-family: 'Montserrat', sans-serif;
-    letter-spacing: 0.5rem;
+    letter-spacing: 0.3rem;
     font-size: 0.9rem;
     color: var(--darkGrayishBlue);
 }
@@ -107,6 +105,25 @@ button:hover {
 }
 
 @media (min-width: 600px) {
-    body {
+    body{
+        margin: 0 auto;
+    }
+
+    .card{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    img{
+        max-width: 300px;
+    }
+
+    .text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 20px;
+        max-width: 300px;
     }
 }
